hphp/hack/test/decl/classes_reified_generics.php.typecheck.exp
File "classes_reified_generics.php", line 9, characters 21-30:
Invalid reified hint (Typing[4305])
File "classes_reified_generics.php", line 9, characters 21-24:
This is the late static bound this type, it cannot be used as a reified type argument
File "classes_reified_generics.php", line 3, characters 15-15:
T is reified
